--- a/cwatland-lt.github.io/src/components/animations/Sphere.css
+++ b/cwatland-lt.github.io/src/components/animations/Sphere.css
@@ -1,5 +1,8 @@
 .sphere {
-    position: relative;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     width: 0;
     height: 0;
     transform-style: preserve-3d;
